--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,44 @@
-name: '[builder] CI for releases'
-
+name: ci
+ 
 on:
-    push:
-        branches:
-            - master
-
+ push:
+   
+ 
 jobs:
-    release:
-        runs-on: ubuntu-latest
-        steps:
-        -
-            name: Checkout
-            uses: actions/checkout@v1
-        -
-            name: Dockerhub login
-            env:
-                DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-                DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-            run: |
-                echo "${DOCKER_PASSWORD}" | docker login --username ${DOCKER_USERNAME} --password-stdin
-        -
-            name: Set up Docker Buildx
-            id: buildx
-            uses: crazy-max/ghaction-docker-buildx@v1
-            with:
-                version: latest
-        -
-            name: Build dockerfile (with push)
-            run: |
-                docker buildx build \
-                --platform=linux/amd64,linux/arm64 \
-                --output "type=image,push=true" \
-                --file ./Dockerfile . \
-                --tag $(echo "${DOCKER_USERNAME}" | tr '[:upper:]' '[:lower:]')/alpine-chrome:latest
-        - 
-            name: Build puppeteer dockerfile (with push)
-            run: |
-                docker buildx build \
-                --platform=linux/amd64,linux/arm64 \
-                --output "type=image,push=true" \
-                --file ./puppeteer/Dockerfile . \
-                --tag $(echo "${DOCKER_USERNAME}" | tr '[:upper:]' '[:lower:]')/alpine-chrome:puppeteer
+ registry-cache:
+   runs-on: ubuntu-latest
+   steps:
+     -
+       name: Set up Docker Buildx
+       uses: docker/setup-buildx-action@v1
+     -
+       name: Set up QEMU
+       uses: docker/setup-qemu-action@v1
+     -
+       name: Login to DockerHub
+       uses: docker/login-action@v1
+       with:
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
+     -
+       name: Build and push
+       uses: docker/build-push-action@v2
+       with:
+         context: .
+         file: ./Dockerfile
+         platforms: linux/arm64,linux/amd64
+         push: true
+         tags: aemilianmayrhofer/alpine-chrome:latest
+         cache-from: type=registry,ref=aemilianmayrhofer/alpine-chrome:latest
+         cache-to: type=inline
+     -
+       name: Build and push
+       uses: docker/build-push-action@v2
+       with:
+         context: .
+         file: ./puppeteer/Dockerfile
+         platforms: linux/arm64,linux/amd64
+         push: true
+         tags: aemilianmayrhofer/alpine-chrome:puppeteer
+         cache-from: type=registry,ref=aemilianmayrhofer/alpine-chrome:puppeteer
+         cache-to: type=inline
