removed registry cache

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,10 +2,12 @@ name: ci
  
 on:
  push:
+  branches:
+    - "master"
    
  
 jobs:
- registry-cache:
+ main:
    runs-on: ubuntu-latest
    steps:
      -
@@ -29,8 +31,6 @@ jobs:
          platforms: linux/arm64,linux/amd64
          push: true
          tags: aemilianmayrhofer/alpine-chrome:latest
-         cache-from: type=registry,ref=aemilianmayrhofer/alpine-chrome:latest
-         cache-to: type=inline
      -
        name: Build and push
        uses: docker/build-push-action@v2
@@ -40,5 +40,3 @@ jobs:
          platforms: linux/arm64,linux/amd64
          push: true
          tags: aemilianmayrhofer/alpine-chrome:puppeteer
-         cache-from: type=registry,ref=aemilianmayrhofer/alpine-chrome:puppeteer
-         cache-to: type=inline
